--- a/borsa/index.html
+++ b/borsa/index.html
@@ -169,37 +169,37 @@
       <h3>Feedback from investors</h3>
       <div class="comment__slider">
         <div class="comment__box">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, unde.</p>
+          <p>In my humble opinion, BorsaPro is one of the top leading brokers in low-cost commissions structure for all kinds of investors,  from high-net-worth individuals to beginning buy-and-hold traders. BorsaPro platform and resources stand out with quality research and tools, including access to its online trader network.</p>
           <img src="img/comment-1.jpg" alt="">
           <b>John Dou</b><br>
           <small>Investor</small>
         </div>
         <div class="comment__box">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, culpa!</p>
+          <p>If you’re looking for something with an easy learning curve, but endless of room to grow, then BorsaPro is the answer for you. There are few educational videos, articles, and webinars to guide you through the basics. Following these, you can stay up to date on various market trends, news, reports, and commentary from different professional market analysts.</p>
           <img src="img/comment-2.jpg" alt="">
           <b>John Dou</b><br>
           <small>Investor</small>
         </div>
         <div class="comment__box">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, officiis?</p>
+          <p>BorsaPro offers an ideal platform suitable for both beginners, or anyone who prefers a simplified, educational interface that can direct you through the ordering process and explain various strategies. The platform from time to time racks up awards and offers enhanced tools and features which includes research reports, real-time data, charts, and technical studies.</p>
           <img src="img/comment-3.jpg" alt="">
           <b>John Dou</b><br>
           <small>Investor</small>
         </div>
         <div class="comment__box">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, expedita?</p>
+          <p>For me, since I started trading and discovered BorsaPro, trading has been easy and safe. They have a rock-bottom pricing. It’s also a standout with a streamlined interface and smart tools. The commission-free and transaction-free offerings are limited. Make profits and change your financial status by trading on here and choosing BorsaPro as your broker.</p>
           <img src="img/comment-1.jpg" alt="">
           <b>John Dou</b><br>
           <small>Investor</small>
         </div>
         <div class="comment__box">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, quas!</p>
+          <p>BorsaPro wins it for its quality of trading and investing research. As an investor and client of BorsaPro, you get a 24/7 full access to a skilled customer operative to answer any questions you might have during trading. They are readily available to help you bring out the right investment potentials in you.</p>
           <img src="img/comment-1.jpg" alt="">
           <b>John Dou</b><br>
           <small>Investor</small>
         </div>
         <div class="comment__box">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, quas!</p>
+          <p>Trading has never been made easy on a platform as BorsaPro offers. The dynamicity of this broker is what makes it the choice of many investors. It has all the characteristics of a good broker Featuring research from several providers, plus stellar execution. Have a wonderful trading experience with BorsaPro, and live the life of a King.</p>
           <img src="img/comment-1.jpg" alt="">
           <b>John Dou</b><br>
           <small>Investor</small>
@@ -215,52 +215,52 @@
           <img src="img/news-1.jpg" alt="">
           <div class="news__content">
             <header>
-              <time>FEB 15 2018</time>
+              <time>March 27, 2018</time>
               <span>Excange</span>
             </header>
-            <b>Lorem ipsum dolor sit amet gd consectetur adipisicing elit</b>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolor quo explicabo iste libero itaque amet, nulla aspernatur ab minus.</p>
-            <a class="button  button--news" href="#">Read More</a>
+            <b>Euro falls as concerns about low inflation resurface</b>
+            <p>The euro fell on Tuesday, as concerns about weak inflation and a slowdown in company borrowing raised questions about the momentum of the euro zone’s economic expansion...</p>
+            <a class="button  button--news" href="https://www.investix.com/euro-falls-concerns-low-inflation-resurface/" target="_blank">Read More</a>
           </div>
         </div>
         <div class="news__box  news__box--2">
           <img src="img/news-2.jpg" alt="">
           <div class="news__content">
             <header>
-              <time>FEB 15 2018</time>
+              <time>March 26, 2018</time>
               <span>Excange</span>
             </header>
-            <b>Lorem ipsum dolor sit amet gd consectetur adipisicing elit</b>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolor quo explicabo iste libero itaque amet, nulla aspernatur ab minus.</p>
-            <a class="button  button--news" href="#">Read More</a>
+            <b>Sterling drops as inflation slows more than expected</b>
+            <p>Sterling fell against the dollar on Tuesday after UK inflation slowed more than forecast in February, the first of several sets of data in a week when the Bank of England is expected to signal interest...</p>
+            <a class="button  button--news" href="https://www.investix.com/sterling-drops-inflation-slows-expected/" target="_blank">Read More</a>
           </div>
         </div>
         <div class="news__box  news__box--3">
           <img src="img/news-3.jpg" alt="">
           <div class="news__content">
             <header>
-              <time>FEB 15 2018</time>
+              <time>March 26, 2018</time>
               <span>Excange</span>
             </header>
-            <b>Lorem ipsum dolor sit amet gd consectetur adipisicing elit</b>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolor quo explicabo iste libero itaque amet, nulla aspernatur ab minus.</p>
-            <a class="button  button--news" href="#">Read More</a>
+            <b>Investors eye currencies for those most at risk in a trade war</b>
+            <p>Foreign exchange markets appear convinced that a global trade war is unlikely to break out anytime soon, although, with long bets on some currencies at record highs, investors fear complacency...</p>
+            <a class="button  button--news" href="https://www.investix.com/investors-eye-currencies-risk-trade-war/" target="_blank">Read More</a>
           </div>
         </div>
         <div class="news__box  news__box--4">
-          <img src="img/news-1.jpg" alt="">
+          <img src="img/news-4.jpg" alt="">
           <div class="news__content">
             <header>
-              <time>FEB 15 2018</time>
+              <time>March 26, 2018</time>
               <span>Excange</span>
             </header>
-            <b>Lorem ipsum dolor sit amet gd consectetur adipisicing elit</b>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolor quo explicabo iste libero itaque amet, nulla aspernatur ab minus.</p>
-            <a class="button  button--news" href="#">Read More</a>
+            <b>WITH CRYPTOTAB<br>CAN YOU EARN?</b>
+            <p>You are asking me more and more often about CryptoTab. I decided to publish a review in Italian to let you understand better what it is, how it works, and if you make money...</p>
+            <a class="button  button--news" href="https://www.investix.com/with-cryptotab-can-you-earn/" target="_blank">Read More</a>
           </div>
         </div>
       </div>
-      <a class="news__all" href="#">View all news</a>
+      <a class="news__all" href="https://www.investix.com/category/blog/" target="_blank">View all news</a>
     </div>
   </section>
   <section class="quote">
