--- a/borsa/index.html
+++ b/borsa/index.html
@@ -115,15 +115,15 @@
       <div class="edge__flex">
         <div class="edge__box  edge__box--1">
           <b>Multi-platform trading</b>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, explicabo voluptas ducimus et cumque ullam at suscipit? Velit, omnis tempore.</p>
+          <p>Timing is everything. Never miss a trade when you can access our platform from a computer anywhere or with your iPhone, iPad or Android.</p>
         </div>
         <div class="edge__box  edge__box--2">
           <b>Trading signals</b>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, explicabo voluptas ducimus et cumque ullam at suscipit? Velit, omnis tempore.</p>
+          <p>Our platform provides real-time signals and alerts to help you trade with live tracking of profit/loss for each signal and a number of strategies.</p>
         </div>
         <div class="edge__box  edge__box--3">
           <b>Algo trading</b>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, explicabo voluptas ducimus et cumque ullam at suscipit? Velit, omnis tempore.</p>
+          <p>Designed to help a trader profit from pre-programmed scenarios, Algo Trading is a type of trading based on intelligent computer software</p>
         </div>
       </div>
     </div>
@@ -155,10 +155,13 @@
     <div class="container">
       <div class="app__flex">
         <div class="app__left">
-          <h3>Trade now</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, minima illum dignissimos in necessitatibus debitis aspernatur modi. Labore, ratione, nemo.</p>
-          <a class="app__apple" href="#"></a>
-          <a class="app__google" href="#"></a>
+          <h3>Multi-platform trading</h3>
+          <b>BorsaPro Meta Trader 4</b>
+            <p>The BorsaPro Meta Trader 4 provides the optimal platform for making the most out of Forex trading.</p>
+          <b>BorsaPro Web Trader</b>
+            <p>Begin trading immediately! BorsaPro`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible.</p>
+          <b>BorsaPro Mobile Trader</b>
+            <p>BorsaPro Trading Mobile Application: The freedom to trade at any time and place.</p>
         </div>
         <img src="img/app-right.png">
       </div>
