--- a/borsa/index.html
+++ b/borsa/index.html
@@ -111,7 +111,7 @@
   <section class="edge">
     <div class="container">
       <h1>Increase your chances to profit</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, nobis.</p>
+      <p>Trade with no limitation on a totally secure platform</p>
       <div class="edge__flex">
         <div class="edge__box  edge__box--1">
           <b>Multi-platform trading</b>
