--- a/borsa/index.html
+++ b/borsa/index.html
@@ -174,38 +174,38 @@
         <div class="comment__box">
           <p>In my humble opinion, BorsaPro is one of the top leading brokers in low-cost commissions structure for all kinds of investors,  from high-net-worth individuals to beginning buy-and-hold traders. BorsaPro platform and resources stand out with quality research and tools, including access to its online trader network.</p>
           <img src="img/comment-1.jpg" alt="">
-          <b>John Dou</b><br>
-          <small>Investor</small>
+          <b>Alexandra Muray</b><br>
+          <small>Teacher</small>
         </div>
         <div class="comment__box">
           <p>If you’re looking for something with an easy learning curve, but endless of room to grow, then BorsaPro is the answer for you. There are few educational videos, articles, and webinars to guide you through the basics. Following these, you can stay up to date on various market trends, news, reports, and commentary from different professional market analysts.</p>
           <img src="img/comment-2.jpg" alt="">
-          <b>John Dou</b><br>
-          <small>Investor</small>
+          <b>Angelina Brown</b><br>
+          <small>Nurse</small>
         </div>
         <div class="comment__box">
           <p>BorsaPro offers an ideal platform suitable for both beginners, or anyone who prefers a simplified, educational interface that can direct you through the ordering process and explain various strategies. The platform from time to time racks up awards and offers enhanced tools and features which includes research reports, real-time data, charts, and technical studies.</p>
           <img src="img/comment-3.jpg" alt="">
-          <b>John Dou</b><br>
-          <small>Investor</small>
+          <b>Natley Philips</b><br>
+          <small>Accountant</small>
         </div>
         <div class="comment__box">
           <p>For me, since I started trading and discovered BorsaPro, trading has been easy and safe. They have a rock-bottom pricing. It’s also a standout with a streamlined interface and smart tools. The commission-free and transaction-free offerings are limited. Make profits and change your financial status by trading on here and choosing BorsaPro as your broker.</p>
-          <img src="img/comment-1.jpg" alt="">
-          <b>John Dou</b><br>
-          <small>Investor</small>
+          <img src="img/comment-4.jpg" alt="">
+          <b>Rick Lawson</b><br>
+          <small>Architect</small>
         </div>
         <div class="comment__box">
           <p>BorsaPro wins it for its quality of trading and investing research. As an investor and client of BorsaPro, you get a 24/7 full access to a skilled customer operative to answer any questions you might have during trading. They are readily available to help you bring out the right investment potentials in you.</p>
-          <img src="img/comment-1.jpg" alt="">
-          <b>John Dou</b><br>
-          <small>Investor</small>
+          <img src="img/comment-5.jpg" alt="">
+          <b>Sam Ferdinand</b><br>
+          <small>Investment trader</small>
         </div>
         <div class="comment__box">
           <p>Trading has never been made easy on a platform as BorsaPro offers. The dynamicity of this broker is what makes it the choice of many investors. It has all the characteristics of a good broker Featuring research from several providers, plus stellar execution. Have a wonderful trading experience with BorsaPro, and live the life of a King.</p>
-          <img src="img/comment-1.jpg" alt="">
-          <b>John Dou</b><br>
-          <small>Investor</small>
+          <img src="img/comment-6.jpg" alt="">
+          <b>Stephen Patochi</b><br>
+          <small>Investment trader</small>
         </div>
       </div>
     </div>
