--- a/borsa/accounts/segregated-account.html
+++ b/borsa/accounts/segregated-account.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mobile - BorsaPro</title>
+  <title>Segregated Account - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <header class="header  header--inner">
+  <header class="header">
     <div class="container">
       <div class="header__flex">
         <a href="../index.html">
@@ -21,18 +21,18 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Accounts</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="../accounts/trade-with-borsapro.html">Trade with BorsaPro</a></li>
-                      <li class="main-nav__item"><a href="../accounts/account-types.html">Account types</a></li>
-                      <li class="main-nav__item"><a href="../accounts/segregated-account.html">Segregated account</a></li>
+                      <li class="main-nav__item"><a href="trade-with-borsapro.html">Trade with BorsaPro</a></li>
+                      <li class="main-nav__item"><a href="account-types.html">Account types</a></li>
+                      <li class="main-nav__item"><a>Segregated account</a></li>
                       <li class="main-nav__item"><a href="#">Open live account</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/platform.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a href="templates/web-trader.html">BorsaPro Web Trader</a></li>
-                      <li class="main-nav__item"><a>BorsaPro Trade Mobile</a></li>
+                      <li class="main-nav__item"><a href="../platforms/metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a href="../platforms/web-trader.html">BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="../platforms/mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -60,44 +60,32 @@
       </div>
     </div>
   </header>
-  <section class="title  title--platforms">
+  <section class="title  title--accounts">
     <div class="container">
-      <h1>BorsaPro Trade Mobile</h1>
+      <h1>Segregated Account</h1>
     </div>
   </section>
-  <section class="mobile">
+  <section class="segregated">
     <div class="container">
-      <div class="mobile__flex">
-        <div class="mobile__meta"></div>
-        <div class="mobile__text">
-          <h1>BorsaPro Trading Mobile Application: The freedom to trade at any time and place.</h1>
-          <p>
-            <b>Don`t miss out – start making trades from your mobile device, no matter if it`s Apple or Android.</b><br>
-            BorsaPro`s mobile software gives you the opportunity to invest, operate your profile and check the latest economic trends, no matter where you are or what time it is, and it`s all without a charge. The potential of the software is sure to cater to any trader, from a beginner to an experienced veteran. Simple and intuitive are the keywords here.
-          </p>
-          <p>The software is available for all devices – Apple products, as well as Android phones and tablets.</p>
-          <a href="#"></a>
-          <a href="#"></a>
-          <p>Get informed about the latest market events, and act accordingly. Invest from your mobile device, no matter where you are.</p>
-          <b>Invest in a wide selection of instruments and enter the global markets. Integrated chartings with symbols, along with technical stats and the latest economic trends will aid you in choosing if you should open or close a given position. Also, using your mobile device to trade is totally safe and private.</b>
-          <ul>
-            <li>Use your mobile device to invest in a variety of financial instruments – Forex, Futures and Commodities.</li>
-            <li>Simple usage and navigation.</li>
-            <li>You can start trading immediately after logging in.</li>
-          </ul>
-          <h2>Easy to use, Extensive & Functional:</h2>
-          <ul>
-            <li>Perfectly safe Forex investment.</li>
-            <li>More than thirty indicators.</li>
-            <li>Timely quotes.</li>
-            <li>Logs of all the investments.</li>
-            <li>Invest by using the latest chartings.</li>
-            <li>Every order type is available.</li>
-            <li>Some features can be used without internet.</li>
-            <li>Swift usage and pleasant interface.</li>
-          </ul>
-        </div>
-      </div>
+      <p>The special BorsaPro Loyalty Saver Account enables user transactions to be perfectly safe and helps avoid any bad payments or slow processing of the information.</p>
+        <b>Benefits</b>
+      <p>Your satisfaction is certain. The account is created in a way which brings many pluses to both parties. Here are the major pluses which you should consider.</p>
+      <ul>
+        <li>100% user satisfactory.</li>
+        <li>Helps avoid any bad or slow processed payments.</li>
+        <li>Efficient funds transferal.</li>
+        <li>Safe chargeback.</li>
+        <li>User friendly operation of your funds.</li>
+      </ul>
+        <b>When would a Loyalty Saver Account be appropriate for me?</b>
+      <p>It is generally used in the beginning, when you place money on your account and helps speed up the transfer process, avoiding any unnecessary paperwork.</p>
+        <b>Condition for releasing and delivering funds</b>
+      <ul>
+        <li>Both parties should concur for the release.</li>
+        <li>When both sides are satisfied with the provided service.</li>
+        <li>At the point in time set for automatic money release.</li>
+        <li>If the user requests delivering of the funds.</li>
+      </ul>
     </div>
   </section>
   <section class="payment">
