--- a/borsa/accounts/trade-with-borsapro.html
+++ b/borsa/accounts/trade-with-borsapro.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mobile - BorsaPro</title>
+  <title>Trade with - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Accounts</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/about-us.html">Trade with BorsaPro</a></li>
-                      <li class="main-nav__item"><a href="templates/account-types.html">Account types</a></li>
+                      <li class="main-nav__item"><a>Trade with BorsaPro</a></li>
+                      <li class="main-nav__item"><a href="account-types.html">Account types</a></li>
                       <li class="main-nav__item"><a href="templates/segregated.html">Segregated account</a></li>
                       <li class="main-nav__item"><a href="#">Open live account</a></li>
                   </ul>
@@ -30,9 +30,9 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/platform.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a href="templates/web.html">BorsaPro Web Trader</a></li>
-                      <li class="main-nav__item"><a href="templates/mobile.html">BorsaPro Trade Mobile</a></li>
+                      <li class="main-nav__item"><a href="../platforms/metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a href="../platforms/web-trader.html">BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="../platforms/mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -60,7 +60,7 @@
       </div>
     </div>
   </header>
-  <section class="title  title--trade">
+  <section class="title  title--accounts  title--trade">
     <div class="container">
       <h1>Trade with <b>BorsaPro</b></h1>
     </div>
