--- a/borsa/platforms/metatrader.html
+++ b/borsa/platforms/metatrader.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mobile - BorsaPro</title>
+  <title>MetaTrader - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -30,9 +30,9 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/platform.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a href="templates/web-trader.html">BorsaPro Web Trader</a></li>
-                      <li class="main-nav__item"><a>BorsaPro Trade Mobile</a></li>
+                      <li class="main-nav__item"><a href="metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a href="web-trader.html">BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -62,42 +62,38 @@
   </header>
   <section class="title  title--platforms">
     <div class="container">
-      <h1>BorsaPro Trade Mobile</h1>
+      <h1>BorsaPro Trade Meta Trader 4</h1>
     </div>
   </section>
-  <section class="mobile">
+  <section class="meta">
     <div class="container">
-      <div class="mobile__flex">
-        <div class="mobile__meta"></div>
-        <div class="mobile__text">
-          <h1>BorsaPro Trading Mobile Application: The freedom to trade at any time and place.</h1>
-          <p>
-            <b>Don`t miss out – start making trades from your mobile device, no matter if it`s Apple or Android.</b><br>
-            BorsaPro`s mobile software gives you the opportunity to invest, operate your profile and check the latest economic trends, no matter where you are or what time it is, and it`s all without a charge. The potential of the software is sure to cater to any trader, from a beginner to an experienced veteran. Simple and intuitive are the keywords here.
-          </p>
-          <p>The software is available for all devices – Apple products, as well as Android phones and tablets.</p>
-          <a href="#"></a>
-          <a href="#"></a>
-          <p>Get informed about the latest market events, and act accordingly. Invest from your mobile device, no matter where you are.</p>
-          <b>Invest in a wide selection of instruments and enter the global markets. Integrated chartings with symbols, along with technical stats and the latest economic trends will aid you in choosing if you should open or close a given position. Also, using your mobile device to trade is totally safe and private.</b>
-          <ul>
-            <li>Use your mobile device to invest in a variety of financial instruments – Forex, Futures and Commodities.</li>
-            <li>Simple usage and navigation.</li>
-            <li>You can start trading immediately after logging in.</li>
-          </ul>
-          <h2>Easy to use, Extensive & Functional:</h2>
-          <ul>
-            <li>Perfectly safe Forex investment.</li>
-            <li>More than thirty indicators.</li>
-            <li>Timely quotes.</li>
-            <li>Logs of all the investments.</li>
-            <li>Invest by using the latest chartings.</li>
-            <li>Every order type is available.</li>
-            <li>Some features can be used without internet.</li>
-            <li>Swift usage and pleasant interface.</li>
-          </ul>
-        </div>
-      </div>
+      <small>The BorsaPro Meta Trader Four provides the optimal platform for making the most out of Forex trading.</small>
+      <p>MT4 is a globally acclaimed software made specifically for the purpose of delivering the best Forex experience, along with Commodities, Futures and different tradeable assets. It is perfect for new traders, as well as seasoned veterans, because it covers all aspects of the trading process. Due to its reliability, easiness of use, timely access to vital information and trading strategies, along with the latest economic data and occurrences, MT4 is considered to be the leading platform worldwide.</p>
+      <a href="../img/tradingtechnologies4setup.exe"></a>
+        <b>Meta Trader Four gives you the opportunity to:</b>
+      <ul>
+        <li>Invest in a wide variety of Currencies, Commodities and Futures.</li>
+        <li>Make analysis of securities quotes.</li>
+        <li>Create a trading strategy.</li>
+        <li>Use your mobile phone to trade, no matter where you are.</li>
+        <li>Look at many charts at the same time.</li>
+        <li>Make customizations to the screens.</li>
+        <li>Get support for many currencies.</li>
+        <li>Choose from a wide number of support languages.</li>
+      </ul>
+        <b>Some of the other pluses of the platform are:</b>
+      <ul>
+        <li>Quick processing.</li>
+        <li>Automatic Investments.</li>
+        <li>Perfect safety.</li>
+        <li>Advanced charts availability.</li>
+        <li>Slippage protection.</li>
+        <li>Lack of 3rd party bridging.</li>
+        <li>Lack of automated syncing.</li>
+        <li>Availability of four pending orders – Buy Limit, Buy Stop, Sell Limit, Sell Stop.</li>
+        <li>.01 lot sizes.</li>
+        <li>Partial closing and many other.</li>
+      </ul>
     </div>
   </section>
   <section class="payment">
