--- a/borsa/accounts/account-types.html
+++ b/borsa/accounts/account-types.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="header__flex">
         <a href="../index.html">
-          <img src="../img/logo.png" width="226" height="76" alt="BorsaPro">
+          <img src="../img/logo.png" width="150" alt="BorsaPro">
         </a>
         <nav class="main-nav__wrapper  page-header__main-nav  main-nav--closed  main-nav--nojs">
           <button class="main-nav__toggle" type="button">Open menu</button>
@@ -21,18 +21,18 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Accounts</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/about-us.html">Trade with BorsaPro</a></li>
-                      <li class="main-nav__item"><a href="templates/account-types.html">Account types</a></li>
-                      <li class="main-nav__item"><a href="templates/segregated.html">Segregated account</a></li>
+                      <li class="main-nav__item"><a href="trade-with-borsapro.html">Trade with BorsaPro</a></li>
+                      <li class="main-nav__item"><a>Account types</a></li>
+                      <li class="main-nav__item"><a href="segregated-account.html">Segregated account</a></li>
                       <li class="main-nav__item"><a href="#">Open live account</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/platform.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a href="templates/web.html">BorsaPro Web Trader</a></li>
-                      <li class="main-nav__item"><a href="templates/mobile.html">BorsaPro Trade Mobile</a></li>
+                      <li class="main-nav__item"><a href="../platforms/metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a href="../platforms/web-trader.html">BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="../platforms/mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -60,7 +60,7 @@
       </div>
     </div>
   </header>
-  <section class="title  title--account-types">
+  <section class="title  title--accounts">
     <div class="container">
       <h1>Account Types</h1>
     </div>
