--- a/borsa/platforms/web-trader.html
+++ b/borsa/platforms/web-trader.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mobile - BorsaPro</title>
+  <title>Web Trader - BorsaPro</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -30,9 +30,9 @@
                 <li class="main-nav__item">
                   <a class="main-nav__title">Platforms</a>
                   <ul class="main-nav__list">
-                      <li class="main-nav__item"><a href="templates/platform.html">BorsaPro Trade Meta Trader 4</a></li>
-                      <li class="main-nav__item"><a href="templates/web-trader.html">BorsaPro Web Trader</a></li>
-                      <li class="main-nav__item"><a>BorsaPro Trade Mobile</a></li>
+                      <li class="main-nav__item"><a href="metatrader.html">BorsaPro Trade Meta Trader 4</a></li>
+                      <li class="main-nav__item"><a>BorsaPro Web Trader</a></li>
+                      <li class="main-nav__item"><a href="mobile.html">BorsaPro Trade Mobile</a></li>
                   </ul>
                 </li>
                 <li class="main-nav__item">
@@ -62,42 +62,39 @@
   </header>
   <section class="title  title--platforms">
     <div class="container">
-      <h1>BorsaPro Trade Mobile</h1>
+      <h1>BorsaPro Web Trader</h1>
     </div>
   </section>
-  <section class="mobile">
+  <section class="web">
     <div class="container">
-      <div class="mobile__flex">
-        <div class="mobile__meta"></div>
-        <div class="mobile__text">
-          <h1>BorsaPro Trading Mobile Application: The freedom to trade at any time and place.</h1>
-          <p>
-            <b>Don`t miss out – start making trades from your mobile device, no matter if it`s Apple or Android.</b><br>
-            BorsaPro`s mobile software gives you the opportunity to invest, operate your profile and check the latest economic trends, no matter where you are or what time it is, and it`s all without a charge. The potential of the software is sure to cater to any trader, from a beginner to an experienced veteran. Simple and intuitive are the keywords here.
-          </p>
-          <p>The software is available for all devices – Apple products, as well as Android phones and tablets.</p>
-          <a href="#"></a>
-          <a href="#"></a>
-          <p>Get informed about the latest market events, and act accordingly. Invest from your mobile device, no matter where you are.</p>
-          <b>Invest in a wide selection of instruments and enter the global markets. Integrated chartings with symbols, along with technical stats and the latest economic trends will aid you in choosing if you should open or close a given position. Also, using your mobile device to trade is totally safe and private.</b>
-          <ul>
-            <li>Use your mobile device to invest in a variety of financial instruments – Forex, Futures and Commodities.</li>
-            <li>Simple usage and navigation.</li>
-            <li>You can start trading immediately after logging in.</li>
-          </ul>
-          <h2>Easy to use, Extensive & Functional:</h2>
-          <ul>
-            <li>Perfectly safe Forex investment.</li>
-            <li>More than thirty indicators.</li>
-            <li>Timely quotes.</li>
-            <li>Logs of all the investments.</li>
-            <li>Invest by using the latest chartings.</li>
-            <li>Every order type is available.</li>
-            <li>Some features can be used without internet.</li>
-            <li>Swift usage and pleasant interface.</li>
-          </ul>
-        </div>
-      </div>
+      <b>Begin trading immediately!</b>
+      <a href="https://webtrader.borsapro.com/">Go to Web Trader</a>
+      <p>BorsaPro`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the BorsaPro Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
+      <p>Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the BorsaPro Online Trader.</p>
+      <b>It lets you:</b>
+      <ul>
+        <li>Have full control over your profile.</li>
+        <li>Perform in-depth market analysis.</li>
+        <li>Invest in a wide selection of orders.</li>
+      </ul>
+      <p>BorsaPro grants you a gateway to all your trading needs with the online and mobile trading applications. They are extremely intuitive and functional, enabling you to start a trade whenever you want, from anywhere with internet access. In case you already have a trading profile you can start a trade immediately.</p>
+      <p>The BorsaPro Online Trader present users with the option to choose from a number of languages, it features the latest charts, fast operation of the trades, and best of all, it makes everything easy. You have the ability to access to trader from a number of different devices such as Apple or Android phone, tablet or PC. The platform is easy to use on every device and you can handle your investments with just a few clicks.</p>
+      <p>Due to the intuitiveness and easiness of use, the BorsaPro Online trader will make sure that you are fully informed about all trades that interest you. Stay knowledgeable on the latest market news and trends, without having to leave your couch.</p>
+      <b>BorsaPro allows you to:</b>
+      <ul>
+        <li>Invest in a wide selection of instruments.</li>
+        <li>Perform the trades swiftly.</li>
+        <li>Get informed about the latest industry trends.</li>
+        <li>Get the actual market prices at the moment.</li>
+        <li>Make trades regardless of your location.</li>
+        <li>Make the platform look according to your desires.</li>
+        <li>Make the changes you want.</li>
+        <li>Make informed trading decisions based on technical stats.</li>
+        <li>Have access from any internet connectible device.</li>
+      </ul>
+      <p>The trading field can be very volatile and the conditions can change in a matter of minutes. Therefore, you need to be able to react quickly in such cases. With the BorsaPro Online Trader, you act accordingly and access your trades at any moment. The advantage is in your hands.</p>
+      <p>With the hastened pace of modern life, you need to be constantly on the go, but the platform lets you combine that with your trading needs, without having to compromise. It`s accessible from any browser, there is no need for you to be stuck to any specific place. Be it in your office, or from a friend`s PC, logging into your account and trading or just checking something is quick and simple.</p>
+      <p>Using BorsaPro to trade is like a walk in the park.</p>
     </div>
   </section>
   <section class="payment">
